Create separate classes for same country and different country services